<?xml version="1.0"?>
<package>
  <name>libgp</name>
  <version>0.0.0</version>
  <description>A fixed version of libgp with catkin support</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="mblum@informatik.uni-freiburg.de">Manuel Blum</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
